Day3/capstone/kustomize/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  template:
    metadata:
      labels:
        app: node-app-prod
    spec:
      containers:
        - name: node-app
