Day3/capstone/kustomize/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  labels:
    app: node-app-prod
spec:
  selector:
    app: node-app-prod
