Day3/capstone/kustomize/overlays/prod/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: node-app-prod
spec:
  to:
    name: node-service-prod
